Styles/style.css
/* Use for Titles and Menu Items */
@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');

/* Use for text and mostly everything else */
@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
}

html {
    background-color: #F8F8F0;
    width: 100vw;
    margin: 0 auto;
}

a {
    color: #F3D13C;
    font-size: 2em;
}

a:hover {
    color: #F8F8F0;
}

a:active {
    color: #F3D13C;
}

:not(header) {
    padding: 0.5em;
}

div {
    content: "";
    background-color: black;
}

header {
    background-color: #D9D9D9;
    display: flex;
    width: 100vw;
    position: fixed;
    top: 0;
    z-index: 100;
    padding-bottom: 1em;
}

.header-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding: 0.5em;
    width: 100%;
}

#logo,
#cart,
#navigation {
    display: flex;
    align-items: center;
}

#logo {
    display: inline-block;
    width: 44%;
    content: "";
    background-image: url("../Images/JP-Logo.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#cart {
    background-color: #D9D9D9;
    display: flex;
    width: 20%;
    align-items: center;
    justify-content: flex-start;
}

#shopping-cart {
    color: black;
    font-size: 1.2em;
}

div.dropdown {
    background-color: #D9D9D9;
    display: flex;
    width: 20%;
    align-items: center;
    justify-content: flex-end;
}

main {
    width: 75vw;
    margin: 0 auto;
}

.product {
    border: solid 1px black;
    background-color: white;
    padding: 0.5rem;
    transition: box-shadow 500ms ease;
    position: relative;
}

#products {
    max-width: 1280px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1em;
    margin-bottom: 2rem;
}

.prodPrice::before {
    content: "$ ";
}

.prodBtn {
    color: #F8F8F0;
    background-color: #9E1D21;
    /* Blue */
    font-weight: bold;
    padding: 0.5em;
    text-align: center;
    border: 2px solid black;
    font-size: 1.5em;
    /* Dark gray */
    border-radius: 30px;

    width: 2em;
    margin: 20px auto;
}

.prodImage {
    width: 100%;
    height: auto;
    aspect-ratio: 3 / 2;
    object-fit: cover;
}

.prodPrice {
    display: inline-block;
    margin-top: 0.5em;
}

button.dropbtn {
    background-color: #D9D9D9;
    width: 50%;
}

#navigation {
    display: flex;
    justify-content: flex-end;
}

.row {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    padding: 0.5em;
}

section {
    padding: 1.5em;
}

.column {
    background-color: #568C6D;
    color: white;
    border: black solid 10px;
    width: 45%;
    padding: 2em;
}

header img {
    box-shadow: none;
}

.carousel img {
    object-fit: cover;
    box-shadow: none;
    max-width: 100%;
    width: 100%;
    max-height: 80%;
    top: 3;
}

body {
    flex-flow: row wrap;
    justify-content: center;
}

.button {
    color: #F8F8F0;
    background-color: #9E1D21;
    /* Blue */
    font-weight: bold;
    padding: 0.5em;
    text-align: center;
    border: 2px solid black;
    /* Dark gray */
    border-radius: 30px;

    width: 200px;
    margin: 20px auto;
}

.center {
    display: flex;
    justify-content: center;
}

.column-photos {
    display: flex;
    flex-wrap: wrap;
    width: fit-content;
    flex-direction: row;
    align-items: center;
}

.full {
    width: 100%;
}

h1 {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    font-family: 'Rock Salt', sans-serif;
    font-size: 5em;
    padding-top: 2em;
    text-align: center;
}

h2 {
    font-size: 3em;
    text-align: center;
}

p {
    font-family: 'Bubblegum Sans', sans-serif;
    font-size: 2em;
    padding: 1.5em;
}

ul {
    list-style-type: none;
}

li {
    font-family: 'Bubblegum Sans', sans-serif;
    font-size: 1.5em;
}

img {
    padding: 0em;
    box-shadow: 0em 1em 2em 0em rgba(0, 0, 0, 0.2);
    max-width: 75%;
}

#tameem,
#james {
    width: 70%;
}

#mascot {
    width: 45%;
}

.reservation-container {
    flex-flow: column wrap;
    width: 50%;
    background-color: #568C6D;
    justify-content: center;
    color: white;
    border: black solid 10px;
}

.squiggle {
    display: flex;
    content: "";
    background-image: url("/Images/squiggle.png");
    background-repeat: repeat-y;

}

.horizontal {
    flex-flow: row wrap;
}

.vertical {
    flex-flow: column wrap;
}

.online-res,
.num-res {
    font-size: 0.89em;
}

#about,
#itinerary {
    font-family: 'Bubblegum Sans', sans-serif;
    font-size: 1em;
    color: #F3D13C;
    text-decoration: underline #F3D13C;
    padding: 0em;
}

a[href*="mailto:"] {
    display: flex;
    justify-content: flex-start;
    font-size: 1em;
}

.fit {
    width: fit-content;
}

/* Table CSS */
table {
    background-color: #568C6D;
    color: #F8F8F0;
    border: 10px black dotted;
    width: 70%;
    font-size: 2em;
}

td:nth-of-type(1) {
    padding: 0.01em;
    border-right: 0.5em black solid;
}

.items-checkout {
    background-color: gray;
    color: white;
    border: 10px black solid;
}

.you-may-like {
    display: flex;
    background-color: #568C6D;
    color: white;
    font-size: 1em;
    width: 45%;
    border: 5px black solid;
    align-items: center;
}

.like-images img {
    box-shadow: none;
    width: 65%;
    border: 5px black solid;
}

#JP-Phone,
#JP-PIN {
    flex-flow: row wrap;
    width: 80%;
}

.Jurassic-Pay {
    display: flex;
    background-color: #9E1D21;
    border: 5px black solid;
    width: 25%;
    height: 20%;
    color: white;
    align-items: center;
    align-self: flex-start;
}

/* Dropdown Button */
.dropbtn {
    color: white;
    font-size: 16px;
    border: none;
    cursor: pointer;
    content: "";
    height: 75%;
    background-image: url("/Images/waffle.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
    background-color: #ddd;
}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {
    display: block;
}

#myDropdown {
    flex-flow: row wrap;
    margin-top: 24em;
}

.carousel-container {
    display: flex;
    justify-content: center;
}

/* Slideshow container */
.carousel {
    max-width: 100%;
    position: relative;
    width: 60%;
}

/* Hide the images by default */
.mySlides {
    display: none;
}

/* Position the "next button" to the right */
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
    background-color: rgba(0, 0, 0, 0.8);
}

.active,
.dot:hover {
    background-color: #717171;
}

/* Fading animation */
.fade {
    animation-name: fade;
    animation-duration: 1.5s;
}

#iSuggestion {
    display: flex;
    justify-content: center;
    width: 30%;
}

@keyframes fade {
    from {
        opacity: .4
    }

    to {
        opacity: 1
    }
}

@media screen and (max-width: 640px) {

    h1 {
        text-align: center;
        padding-top: 2em;
        font-size: 3em;
    }

    h2 {
        font-size: 2.5em;
    }

    button.dropbtn {
        width: 100%;
    }

    #shopping-cart {
        font-size: 0.9em;
    }
    
    .column {
        width: 100%;
        margin-top: 1em;
    }

    .column-photos {
        display: flex;
        justify-content: center;
        width: 100%;
    }

    body {
        flex-flow: column wrap;
        justify-content: center;
    }

    main {
        width: 85vw;
        margin: 0 auto;
    }

    p {
        font-size: 1.2em;
        padding: 0em;
    }

    #iSuggestion {
        display: flex;
        justify-content: center;
        width: 100%;
    }

    .reservation-container {
        width: 100%;
    }

    .prodBtn {
        font-size: 1em;
    }

    #products {
        padding: 1em;
        grid-template-columns: repeat(1, 1fr);
    }

    /* Fix carousel not working on mobile */
    .carousel {
        max-width: 100%;
        position: relative;
        width: 100%;
    }

    li {
        font-size: 0.8em;
    }

    #mascot {
        width: 100%;
    }

    .button {
        padding: 1em;
        font-size: 1em;
    }
}

